# memplusplus

./: .clang-format  .clang-tidy  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  codecov.yml  mempp.code-workspace  run-fuzzer.sh  run-valgrind.sh  run_codechecker.sh  run_fuzzer.sh  subgraphs_example.dot  workspace.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarking-mpp.yml  codeql.yml  cpp_ci.yml  gitlab_sync.yml
additional_info/: README.md  objects_graph_with_gcptrs_example.dot
benchmark/: CMakeLists.txt  bench_main.cpp  benchmark_mpp.cpp
cmake/: FindValgrind.cmake  clang-cxx-dev-tools.cmake
dev/bench/: data.js
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
example_project/: CMakeLists.txt
example_project/src/: main.cpp
fuzzer/: CMakeLists.txt
fuzzer/corpus/: testcase1.txt
fuzzer/crashes/: crash-7dbfd995f3c7093da73500f7220a3663ff906cbf  crash-heuristics  crash-invalid-write-shared-gc-ptr
fuzzer/include/fuzzer/: crc_calculator.hpp  fuzzer.h  tokenizer.hpp
fuzzer/src/: fuzzer_main.cpp  main.cpp  tokenizer.cpp
fuzzing_harness/: CMakeLists.txt
fuzzing_harness/src/: main.cpp
libmemplusplus/: CMakeLists.txt
libmemplusplus/include/: CMakeLists.txt
libmemplusplus/include/mpp/: CMakeLists.txt
libmemplusplus/include/mpplib/: arena.hpp  chunk.hpp  config.h  config.h.in  config.hpp  config.hpp.in  exception.hpp  gc.hpp  gc_graph.hpp  gcptr.hpp  graph.hpp  memory_allocator.hpp  memory_manager.hpp  mpp.hpp  shared_gcptr-imp.hpp  shared_gcptr.hpp  stl_allocator_interface.hpp
libmemplusplus/include/mpplib/containers/: chunk_treap.hpp  gc_graph.hpp  node.hpp  vertex.hpp
libmemplusplus/include/mpplib/heuristics/: heuristics.hpp
libmemplusplus/include/mpplib/utils/: assert.hpp  colours.hpp  env_options.hpp  log.hpp  macros.hpp  options.hpp  profiler.hpp  profiler_definitions.hpp  profiler_timer.hpp  random.hpp  statistics.hpp  timer.hpp  utils.hpp
libmemplusplus/src/: arena.cpp  config.hpp.in  gc.cpp  gc_graph.cpp  gcptr.cpp  graph.cpp  memory_allocator.cpp  memory_manager.cpp  mpp.cpp  shared_gcptr-imp.cpp  shared_gcptr-imp.hpp  shared_gcptr.cpp
libmemplusplus/src/containers/: chunk_treap.cpp  gc_graph.cpp  node.cpp  vertex.cpp
libmemplusplus/src/containers/visualizers/: chunk_treap_visualizer.cpp  gc_graph_visualizer.cpp
libmemplusplus/src/heuristics/: heuristics.cpp
libmemplusplus/src/mpp/: CMakeLists.txt  mpp.cpp
libmemplusplus/src/utils/: env_options.cpp  log.cpp  options.cpp  profiler.cpp  profiler_timer.cpp  statistics.cpp  timer.cpp  utils.cpp
libmemplusplus/tests/: CMakeLists.txt  allocator_logic_tests.cpp  chunk_treap_test.cpp  gc_graph_tests.cpp  shared_gcptr_tests.cpp  unit_tests.cpp
tests/: CMakeLists.txt  allocator_logic_tests.cpp  asan_tests.cpp  chunk_treap_test.cpp  gc_graph_tests.cpp  gc_tests.cpp  gtest_fixtures.hpp  security_tests.cpp  shared_gcptr_tests.cpp
